# jFUSE

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
paper/: jfuse_paper.tex
paper/scripts/: exp1_model_fidelity.py  exp2_gradient_verification.py  exp3_calibration_efficiency.py  exp4_distributed_calibration.py  plot_results.py  run_all_experiments.py
src/jfuse/: __init__.py  cli.py  configs.py  coupled.py  extractor.py  postprocessor.py  preprocessor.py  runner.py  sfconfig.py  static_inputs.py
src/jfuse/calibration/: __init__.py  optimizer.py  parameter_manager.py  transfer_functions.py  worker.py
src/jfuse/fuse/: config.py  model.py  physics.py  state.py
src/jfuse/io/: __init__.py  filemanager.py  netcdf.py
src/jfuse/optim/: calibration.py
src/jfuse/routing/: __init__.py  network.py  router.py
tests/: test_advanced.py  test_fuse.py  test_glacier_lakes.py
